@startuml
'https://plantuml.com/class-diagram

abstract class AbstractProp

class PropFactory
class BloodPropFactory
class BombPropFactory
class BulletPropFactory

class BloodProp
class BombProp
class BulletProp

PropFactory <|-- BloodPropFactory
PropFactory <|-- BombPropFactory
PropFactory <|-- BulletPropFactory

AbstractProp <|-- BloodProp
AbstractProp <|-- BombProp
AbstractProp <|-- BulletProp


PropFactory ..> AbstractProp
BloodPropFactory ..> BloodProp : create
BombPropFactory ..> BombProp : create
BulletPropFactory ..> BulletProp : create

class AbstractProp{
    +Prop(int locationX, int locationY, int speedX, int speedY):void
    +func():void
    +forward():void
}

class PropFactory{
    +createAbstractProp():AbstractProp
}

class BloodPropFactory{
    +createAbstractProp():AbstractProp
}
class BombPropFactory{
    +createAbstractProp():AbstractProp
}
class BulletPropFactory{
    +createAbstractProp():AbstractProp
}

class BloodProp{
    +BloodProp(int locationX, int locationY, int speedX, int speedY)
    +func(int hp):void
    +forward():void
}

class BombProp{
    +BombProp(int locationX, int locationY, int speedX, int speedY)
    +func():void
    +forward():void
}

class BulletProp{
    +BulletProp(int locationX, int locationY, int speedX, int speedY)
    +func():void
    +forward():void
}

@enduml